second_commit: Update project files

--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -22,33 +22,12 @@
     <div class="chat-container" id="chatContainer">
       <!-- 消息列表 -->
       <div class="messages-list" id="messagesList">
-        <!-- 欢迎消息 -->
-        <div class="message-item ai-message">
-          <div class="message-avatar">
-            <div class="avatar-circle">
-              <span style="font-size: 20px;">🔮</span>
-            </div>
-          </div>
-          <div class="message-content">
-            <div class="message-bubble">
-              <p>Hi，我是准了AI塔罗师～</p>
-              <p>请告诉我你想咨询的问题，我会为你挑选合适的牌阵并进行解读。</p>
-            </div>
-          </div>
-        </div>
+        <!-- 通过JS动态渲染欢迎消息和快捷问题 -->
       </div>
     </div>
 
     <!-- 输入区域 -->
     <div class="chat-input-area" id="inputArea">
-      <!-- 快捷问题（初始状态显示） -->
-      <div class="quick-questions" id="quickQuestions">
-        <div class="quick-question-label">你可能想问我</div>
-        <div class="quick-questions-grid" id="quickQuestionsGrid">
-          <!-- 动态加载快捷问题 -->
-        </div>
-      </div>
-
       <!-- 输入框区域 -->
       <div class="input-wrapper">
         <div class="input-container">
