--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,17 +35,17 @@
       <!-- 每日运势卡片 -->
       <div class="daily-fortune">
         <div class="fortune-header">
-          <h2>用缘之日</h2>
-          <span class="date">04 31 处女座人出生</span>
+          <h2>用脑之日</h2>
+          <span class="date">04 33 太阳进入处女座</span>
         </div>
         <p class="fortune-text">
-          证明你的赶冒险，面临冒险，学习练习提纲，重申提单让防止，回答重重重冒学习，写作，逐...
+          近期你的头脑灵光，思维活跃，学习效率提高，做事也事半功倍，因此更加适合学习、写作、读...
         </p>
       </div>
 
       <!-- 金刚位（功能入口区） -->
       <div class="king-kong-section">
-        <h3 class="section-title">用缘工具</h3>
+        <!-- 移除标题 -->
         <div class="king-kong-grid">
           <!-- AI塔罗占卜入口 -->
           <a href="/frontend/tarot.html" class="king-kong-item" data-track="tarot_entry">
